# data-starter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/: main.py
src/data_starter/: extract.py  generate_data.py  load.py  transform.py
tests/: unit_test.py
